verify-image-signatures-policy.yml
---
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: verify-image-signatures
spec:
  module: "registry://ghcr.io/kubewarden/policies/verify-image-signatures:v0.1.5"
  settings:
    signatures:
      - image: ghcr.io/goreleaser/*
        github_actions:
          owner: goreleaser
          # repo: a-repo # optional
      - image: ghcr.io/kubewarden/*
        github_actions:
          owner: kubewarden
    modifyImagesWithDigest: false
  rules:
    - apiGroups:
        - ""
      apiVersions:
        - v1
      resources:
        - pods
      operations:
        - CREATE
        - UPDATE
  mutating: false
